--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,17 @@
 <html>
 	<head>
+		<title>Hangman</title>
+		<link href="styles.css" rel="stylesheet" type="text/css">
 	</head>
 		<body>
-			<%= display %>
+			<h1>Hangman!</h1>
+			<div id = "display">
+				<%= display %>
+			</div>
+			<form>
+				<input type='text' name='guess'/>
+				<input type='submit' value='submit'/>
+			</form>
 			<%= word %>
 		</body>
 </html>
