--- a/views/index.erb
+++ b/views/index.erb
@@ -9,9 +9,39 @@
 				<%= display %>
 			</div>
 			<form>
-				<input type='text' name='guess'/>
-				<input type='submit' value='submit'/>
+				<div id = "wrapper">
+					<label>Guess a letter!</label>
+					<input type='text' name='guess' id = 'guess'/>
+
+					<div>
+						<input type='submit' value='submit'/>
+					</div>
+
+					<div>
+						<a href='/reset'>New Game</a>
+					</div>
+
+				</div>
 			</form>
+
+			<div id = 'message'>
+				<%= message %>
+			</div>
+
+			<div id = 'history'>
+				<div>
+					Guesses
+				</div>
+
+				<div id = 'choices'>
+					<%= choices.join(" ")%>
+				</div>
+			</div>
+			<div>
+				<%= counter %>
+			</div>
+		<div>
 			<%= word %>
+		</div>
 		</body>
 </html>
