--- a/views/index.erb
+++ b/views/index.erb
@@ -12,6 +12,8 @@
 				<div id = "wrapper">
 					<label>Guess a letter!</label>
 					<input type='text' name='guess' id = 'guess'/>
+					<label>Guess the word!</label>
+					<input type='text' name='word_guess' id ='word_guess'/>
 
 					<div>
 						<input type='submit' value='submit'/>
@@ -26,6 +28,10 @@
 
 			<div id = 'message'>
 				<%= message %>
+			</div>
+
+			<div id = 'word_guess'>
+				<%= word_guess_message %>
 			</div>
 
 			<div id = 'history'>
