--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
 	</head>
 		<body>
-			<h1>Alex Chi's Hangman!</h1>
+			<h1>Mr. Chi's Hangman!</h1>
 			<div id = "display">
 				<%= display %>
 			</div>
@@ -45,5 +45,8 @@
 			<div id = 'new_game'>
 				<a href='/reset'>New Game</a>
 			</div>	
+			<div>
+				<%= correct_counter %>
+			</div>
 		</body>
 </html>
