removed cheat mode

--- a/views/lose.erb
+++ b/views/lose.erb
@@ -5,7 +5,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
 	</head>
 		<body>
-			<h1>Alex Chi's Hangman!</h1>
+			<h1>Mr. Chi's Hangman!</h1>
 			<h2> You Lost! </h2>
 			<div>
 				<img src="images/hangman_<%=counter%>.png" alt="hangman">
