--- a/views/win.erb
+++ b/views/win.erb
@@ -5,7 +5,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
 	</head>
 		<body>
-			<h1>Alex Chi's Hangman!</h1>
+			<h1>Mr. Chi's Hangman!</h1>
 			<h2>Congratulations! You won!</h2>
 			<div id = "display">
 				<%= display %>
